# arcadedb

./: .codacy.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  .prettierrc.yml  2590-composite-index-analysis.md  2702-sequential-index-creation-fix.md  2854-grpc-resultset-alias.md  2915-vector-index-hnsw-persistence.md  2945-ha-alias-resolution.md  2946-removeserver-type-mismatch.md  2947-http-address-propagation.md  2948-fix-test-assertions.md  2949-update-server-identifier-usage.md  2950-update-cluster-configuration.md  2951-implement-setserveraddresses.md  2952-dns-based-discovery.md  2953-kubernetes-headless-service.md  2954-health-check-enhancements.md  2955-toxiproxy-integration.md  2956-chaos-engineering-tests.md  2957-database-comparison.md  2958-extract-test-utilities.md  2959-performance-benchmarks.md  2960-improve-test-reliability.md  2969-date-handling-modernization.md  2970-fix-remote-date-it-bug.md  2971-improve-ha-random-crash-reliability.md  2972-add-thread-safety-ha-split-brain.md  2973-add-schema-propagation-waits.md  3304-index-ignored-max-aggregate.md  3615-index-compaction-register-file-concurrent.md  3661-gremlin-default-database-creation.md  3664-sqlscript-querynotidempotentexception.md  3732-default-logger-log-directory.md  3821-timeseries-line-protocol-bugs.md  3951-inline-relationship-predicate.md  3952-exists-match-subquery-relationship-type.md  (+52 more)
.claude/: settings.local.json
.github/: .mergify.yml  FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.gitlab/: CODEOWNERS
.reuse/: dep5
bindings/python/: .gitignore  Dockerfile.build  README.md  build-all.sh  build-native.sh  build.sh  ensure-build-tools.sh  extract_version.py  jar_exclusions.txt  mkdocs.yml  pyproject.toml  setup.py  setup_jars.py  write_version.py
bindings/python/docs/: api-access-methods.md  index.md  java-api-coverage.md  troubleshooting.md
bindings/python/docs/api/: database.md  exceptions.md  importer.md  results.md  server.md  transactions.md  vector.md
bindings/python/docs/development/: architecture.md  contributing.md  documentation.md  release.md  testing.md  troubleshooting.md
bindings/python/docs/development/testing/: best-practices.md  overview.md  test-concurrency.md  test-core.md  test-gremlin.md  test-importer.md  test-server-patterns.md  test-server.md
bindings/python/docs/examples/: 01_simple_document_store.md  02_social_network_graph.md  03_vector_search.md  04_csv_import_documents.md  index.md
bindings/python/docs/getting-started/: distributions.md  installation.md  quickstart.md
bindings/python/docs/guide/: graphs.md  import.md  operations.md  server.md  vectors.md
bindings/python/docs/guide/core/: database.md  queries.md  transactions.md
bindings/python/docs/stylesheets/: extra.css
bindings/python/examples/: .gitignore  01_simple_document_store.py  02_social_network_graph.py  03_vector_search.py  04_csv_import_documents.py  05_csv_import_graph.py  06_vector_search_recommendations.py  07_stackoverflow_multimodel.py  07_stackoverflow_tables_oltp.py  08_server_mode_rest_api.py  08_stackoverflow_tables_olap.py  09_stackoverflow_graph_oltp.py  10_stackoverflow_graph_olap.py  11_vector_index_build.py  12_vector_search.py  13_stackoverflow_hybrid_queries.py  14_lifecycle_timing.py  15_import_database_vs_transactional_table_ingest.py  16_import_database_vs_transactional_graph_ingest.py  17_timeseries_end_to_end.py  18_geo_predicates_wkt.py  19_hash_index_exact_match.py  20_graph_algorithms_route_planning.py  21_graph_analytical_view_sql.py  21_server_mode_http_access.py  22_graph_analytical_view_sql.py  EXAMPLES_PLAN.md  README.md  basic.py  download_data.py  download_sample_data.py  run_benchmark_04_csv_import_documents.sh  run_benchmark_05_csv_import_graph.sh
bindings/python/notebooks/: example.ipynb
bindings/python/scripts/: Dockerfile.build  build-native.sh  build.sh  extract_version.py  jar_exclusions.txt  setup_jars.py  verify_wheel_platform_tag.py  write_version.py
bindings/python/src/arcadedb_embedded/: __init__.py  _logging.py  async_executor.py  batch.py  citation.py  core.py  exceptions.py  exporter.py  graph.py  graph_batch.py  importer.py  jvm.py  results.py  schema.py  server.py  transactions.py  type_conversion.py  vector.py
bindings/python/src/java/com/arcadedb/python/: ColumnBatcher.java  EdgeBatcher.java  RowBatcher.java  VertexBatcher.java
bindings/python/tests/: README.md  __init__.py  conftest.py  test_async_executor.py  test_batch_context.py  test_concurrency.py  test_core.py  test_cypher.py  test_database_utils.py  test_docs_examples.py  test_exporter.py  test_geo_predicate_sql.py  test_graph.py  test_graph_algorithms_sql.py  test_graph_api.py  test_graph_batch.py  test_gremlin.py  test_hash_index_schema.py  test_import_database.py  test_importer.py  test_importer_api.py  test_jvm_args.py  test_logging_helper.py  test_materialized_view_sql.py  test_numpy_support.py  test_resultset.py  test_schema.py  test_server.py  test_server_patterns.py  test_timeseries_sql.py  test_transaction_config.py  test_type_conversion.py  test_vector.py  test_vector_params_verification.py  test_vector_sql.py  test_wheel_platform_tag.py
bolt/: SERVER_IDENTITY.md  pom.xml
config/: ai.json
console/: pom.xml
coverage/: pom.xml
docs/: 2026-01-15-ha-2server-cluster-fix-results.md  2026-01-15-ha-test-failures-analysis.md  2026-01-19-ha-test-triage-results.md  2026-01-19-haserver-investigation-results.md  2026-01-19-phase3-validation-results.md  2026-01-19-phase4-validation-results.md  3307-cypher-head-collect-null-results.md  3315-create-edge.md  3318-undertow-upgrade.md  4273-connection-strategy-sticky-pins-server.md  4274-cluster-topology-consistency.md  4275-grpc-jul-messageformat-placeholders.md  4278-lockfilesinorder-silent-migration.md  4287-leiden-reltypes-singleton.md  4316-transactioncontext-removefile-autoboxing.md  (+172 more)
e2e-python/: README.md  pyproject.toml
e2e-python/tests/: test_arcadedb.py  test_asyncpg.py  test_bolt.py  test_sqlalchemy.py
(+6755 files in other folders)
