[project]
name = "arcadedb-e2e-python"
version = "0.1.0"
description = "End-to-end Python tests for ArcadeDB"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

dependencies = [
    "testcontainers>=4.9.1",
    "pytest>=8.3.4",
    "pytest-check>=2.5.0",
    "docker>=7.1.0",
    "psycopg>=3.2.5",
    "psycopg-binary>=3.2.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tests"]
