#
# Copyright © 2021-present Arcade Data Ltd (info@arcadedata.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "arcadedb-e2e-python"
version = "0.1.0"
description = "End-to-end Python tests for ArcadeDB"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

dependencies = [
    "testcontainers>=4.9.1",
    "pytest>=8.3.4",
    "pytest-check>=2.5.0",
    "docker>=7.1.0",
    "psycopg>=3.2.5",
    "psycopg-binary>=3.2.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tests"]
