[build-system]
requires = ["build>=0.7.0", "setuptools>=61.0", "wheel", "jpype1"]
build-backend = "setuptools.build_meta"

# This file defines the package metadata for arcadedb-embedded.
# During build, the version is overwritten from parent pom.xml via extract_version.py

[project]
name = "arcadedb-embedded"
version = "0.0.0"
description = "ArcadeDB embedded multi-model database with bundled JRE - no Java installation required"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Taewoon Kim", email = "taewoon@humem.ai" }
]
keywords = ["database", "graph", "document", "multi-model", "nosql", "arcadedb", "embedded", "jre", "java"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "jpype1>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "numpy>=1.20.0",
]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest>=7.0.0",
    "pytest-cov",
    "numpy>=1.20.0",
]
vector = [
    "numpy>=1.20.0",
]
examples = [
    "py7zr>=0.20.0",  # Required for Stack Exchange data downloads
]

[project.urls]
Homepage = "https://github.com/humemai/arcadedb-embedded-python"
Documentation = "https://docs.humem.ai/arcadedb/"
Repository = "https://github.com/humemai/arcadedb-embedded-python"
"Bug Tracker" = "https://github.com/humemai/arcadedb-embedded-python/issues"
"ArcadeDB Upstream" = "https://github.com/ArcadeData/arcadedb"

[tool.setuptools]
packages = ["arcadedb_embedded"]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
arcadedb_embedded = [
    "jars/*.jar",
    "jre/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "server: tests that require server/studio support",
    "integration: tests that require external components",
]
